--- a/install
+++ b/install
@@ -1,6 +1,7 @@
 #!/bin/bash
 #
 # This script will setup my environment and install all necessary prerequisites
+echo "Note: This script is *not* hands off and will occasionally require user input"
 
 # install apt prepequisites
 sudo apt install gcc
@@ -8,6 +9,7 @@ sudo apt install clang
 sudo apt install npm
 sudo apt install zsh
 sudo apt install curl
+sudo apt install tmux
 
 # install separate stuff
 # rust
@@ -20,6 +22,7 @@ sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/too
 rm ~/.zshrc # remove default oh-my-zsh config
 
 # znap
+echo "--------> Note: Use path ~/.zsh-plugins/ for znap"
 git clone --depth 1 -- https://github.com/marlonrichert/zsh-snap.git
 source zsh-snap/install.zsh
 
